Add name detail in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
+  "name": "markdown-editor",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
